css/browser.css
body {
	background-color: #05152f;
    position: relative;
    width: 98%;
    margin-left: auto;
    margin-right: auto;
}
img{
    -webkit-user-drag: none;
}

.browserTitle{
    color: white;
    opacity: 0.8;
    position: absolute;
    top: -10px;
    left: 15px;
    z-index: 1;
}
.refresh {
    opacity: 0.8;
    position: absolute;
    top: 8px;
    left: 210px;
    color: white;
    font-weight: bold;
    background-color: black;
    width: 115px;
    height: 30px;
    border-style: solid;
    border: 1px solid white;
	z-index:1000;
}
.refresh:hover{
    background-color: #1a3d5a;
}
.serverStats {
    color: white;
	font-weight: bold;
    opacity: 0.8;
    position: absolute;
    top: 3px;
    left: 350px;
    z-index: 1;
}
.closeButton {
    opacity: 0.8;
    position: absolute;
    top: 8px;
    right: 2px;
    color: white;
    font-weight: bold;
    background-color: black;
    width: 95px;
    height: 30px;
    border-style: solid;
    border: 1px solid white;
    display: none;
}
.closeButton:hover{
    background-color: #1a3d5a;
}
.controllerButton{
    opacity: 0;
    margin-top: -3;
    margin-left: 5;
    height: 28;
    width: 28;
    display: none;
}
.selected .controllerButton{
    opacity: 1;
}

.selected{
    background-color: #31415b;
}

.refresh .controllerButton{
    opacity: 1;
}

.closeButton .controllerButton{
    opacity: 1;
}

#serverTable_wrapper{
    opacity: 0.8;
    top: 55;
    height: -webkit-calc(100% - 50px);
    padding-left: 10px;
    padding-right: 10px;
    z-index: 1;
    -webkit-clip-path: polygon(100% 0, 100% 100%, 45px 100%, 0 -webkit-calc(100% - 50px), 0 0);
}

#serverTable tbody tr td{
    background-color: #13233d;
    color: white;
    border: 1px solid #05152f;
}

#serverTable tbody tr{
    -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 65%, 99% 100%, 0% 100%);
}

#serverTable tbody tr.selected td{
    background-color: white;
    color: black;
}

#serverTable thead tr th.sorting_asc, thead tr th.sorting_desc {
    background-color: white;
    color: black;
}

#serverTable thead tr th.sorting:hover{
    color: white;
}

#serverTable thead tr th.sorting{
    padding-top: 0;
    color: white;
    border-bottom: 1px solid white;
}

#serverTable tbody tr td.sorting_1{
    color: white;
}

#serverTable tbody tr:hover td{
    background-color: #31415b;
	color: white;
    cursor: pointer;
}

#serverTable_filter{
    position: relative;
    top: -45px;
    right: -4px;
    z-index: 3;
}

#serverTable_filter label{
    color: white;
}

#serverTable_filter input{
    color: black;
}

#serverTable_length{
    display: none;
}

#serverTable_paginate{
    display: none
}

#serverTable_paginate label{
    color: white !important;
}

#serverTable_info{
    display: none;
}

#serverTable{
	border-bottom: 0;
}

#connectionStatus{
	opacity: 0.8;
	position:fixed; bottom:0; right: 0;
	z-index:1000;
	padding-right: 8;
	padding-bottom: 7;
    color: white;
}

td.details-control {
    background: url('../images/details_open.png') no-repeat center center;
    cursor: pointer;
	background-color: black !important;
}

tr.shown td.details-control {
    background: url('../images/details_close.png') no-repeat center center;
}

#gamecardborder{
    position: absolute;
    bottom: 10px;
    right: 10px;
    height: 132px;
	width: 552px;
    background-color: #404f70;
    -webkit-clip-path: polygon(4% 0, 100% 0, 100% 82%, 96% 100%, 0 100%, 0 20%);
    z-index: 1;
}

#gamecard{
    opacity: 0.8;
    background-color:#13233d;
    left: 1px;
    top: 1px;
    padding: 1px;
    float: left;
	color: white;
	height: 130px;
	width: 550px;
    position: relative;
    margin-bottom: 10px;
    padding-left: 10px;
    -webkit-clip-path: polygon(4% 0, 100% 0, 100% 82%, 96% 100%, 0 100%, 0 20%);
}

#mappic{
    right: 0px;
    margin-top: -30px;
    height: 128px;
    position: relative;
    float: right;
    border-left: 1px solid #404f70;
    padding-left: 1px;
}

#varpic{
    height: 75px;
    right: 185px;
    top: 25px;
    position: absolute;
    float: right;
}

#title{
    background-color: black;
    margin-left: -10px;
    width: 256px;
    height: 30px;
    border-bottom: 1px solid #404f70;
    color: white;
    text-align: center;
    line-height: 30px;
}

#map{
    float: right;
}

#name{
    width: 248px;
    overflow-wrap: break-word;
    overflow: hidden;
    max-height: 38px;
}

#extBorder{
    position: absolute;
    top: 0px;
    background-color: #404f70;
    height: 100%;
    width: 100%;
    padding: 1px;
    -webkit-clip-path: polygon(535px 0%, 585px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
    z-index: 0;
}

#extBorder2{
    background-color: #05152f;
    top: 1px;
    left: 1px;
    height: 100%;
    padding: 5px;
    -webkit-clip-path: polygon(533px 0%, 583px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
}

